--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -26,7 +26,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Zadzwoń"
+        android:text="Zadzwoń do mnie"
         android:onClick="CallBtnClicked"
         android:layout_below="@+id/telNumber"
         />
